JDK8 compat: merge upstream main, add HttpComponents5/Resilience4j deps, refactor Java 9+ APIs, spotless apply