@@ -24,32 +24,37 @@ import java.util.*;
 
 public class DatabricksThriftUtil {
 
-  private static final Map<TTypeId, ColumnInfoTypeName> T_TYPE_ID_COLUMN_INFO_TYPE_NAME_MAP =
-      Map.ofEntries(
-          Map.entry(BOOLEAN_TYPE, ColumnInfoTypeName.BOOLEAN),
-          Map.entry(TINYINT_TYPE, ColumnInfoTypeName.BYTE),
-          Map.entry(SMALLINT_TYPE, ColumnInfoTypeName.SHORT),
-          Map.entry(INT_TYPE, ColumnInfoTypeName.INT),
-          Map.entry(BIGINT_TYPE, ColumnInfoTypeName.LONG),
-          Map.entry(FLOAT_TYPE, ColumnInfoTypeName.FLOAT),
-          Map.entry(DOUBLE_TYPE, ColumnInfoTypeName.DOUBLE),
-          Map.entry(STRING_TYPE, ColumnInfoTypeName.STRING),
-          Map.entry(VARCHAR_TYPE, ColumnInfoTypeName.STRING),
-          Map.entry(TIMESTAMP_TYPE, ColumnInfoTypeName.TIMESTAMP),
-          Map.entry(BINARY_TYPE, ColumnInfoTypeName.BINARY),
-          Map.entry(DECIMAL_TYPE, ColumnInfoTypeName.DECIMAL),
-          Map.entry(DATE_TYPE, ColumnInfoTypeName.DATE),
-          Map.entry(CHAR_TYPE, ColumnInfoTypeName.CHAR),
-          Map.entry(INTERVAL_YEAR_MONTH_TYPE, ColumnInfoTypeName.INTERVAL),
-          Map.entry(INTERVAL_DAY_TIME_TYPE, ColumnInfoTypeName.INTERVAL),
-          Map.entry(ARRAY_TYPE, ColumnInfoTypeName.ARRAY),
-          Map.entry(MAP_TYPE, ColumnInfoTypeName.MAP),
-          Map.entry(NULL_TYPE, ColumnInfoTypeName.STRING),
-          Map.entry(STRUCT_TYPE, ColumnInfoTypeName.STRUCT));
+  private static final Map<TTypeId, ColumnInfoTypeName> T_TYPE_ID_COLUMN_INFO_TYPE_NAME_MAP;
+
+  static {
+    Map<TTypeId, ColumnInfoTypeName> m =
+        new java.util.EnumMap<TTypeId, ColumnInfoTypeName>(TTypeId.class);
+    m.put(BOOLEAN_TYPE, ColumnInfoTypeName.BOOLEAN);
+    m.put(TINYINT_TYPE, ColumnInfoTypeName.BYTE);
+    m.put(SMALLINT_TYPE, ColumnInfoTypeName.SHORT);
+    m.put(INT_TYPE, ColumnInfoTypeName.INT);
+    m.put(BIGINT_TYPE, ColumnInfoTypeName.LONG);
+    m.put(FLOAT_TYPE, ColumnInfoTypeName.FLOAT);
+    m.put(DOUBLE_TYPE, ColumnInfoTypeName.DOUBLE);
+    m.put(STRING_TYPE, ColumnInfoTypeName.STRING);
+    m.put(VARCHAR_TYPE, ColumnInfoTypeName.STRING);
+    m.put(TIMESTAMP_TYPE, ColumnInfoTypeName.TIMESTAMP);
+    m.put(BINARY_TYPE, ColumnInfoTypeName.BINARY);
+    m.put(DECIMAL_TYPE, ColumnInfoTypeName.DECIMAL);
+    m.put(DATE_TYPE, ColumnInfoTypeName.DATE);
+    m.put(CHAR_TYPE, ColumnInfoTypeName.CHAR);
+    m.put(INTERVAL_YEAR_MONTH_TYPE, ColumnInfoTypeName.INTERVAL);
+    m.put(INTERVAL_DAY_TIME_TYPE, ColumnInfoTypeName.INTERVAL);
+    m.put(ARRAY_TYPE, ColumnInfoTypeName.ARRAY);
+    m.put(MAP_TYPE, ColumnInfoTypeName.MAP);
+    m.put(NULL_TYPE, ColumnInfoTypeName.STRING);
+    m.put(STRUCT_TYPE, ColumnInfoTypeName.STRUCT);
+    T_TYPE_ID_COLUMN_INFO_TYPE_NAME_MAP = java.util.Collections.unmodifiableMap(m);
+  }
 
   private static final JdbcLogger LOGGER = JdbcLoggerFactory.getLogger(DatabricksThriftUtil.class);
   private static final List<TStatusCode> SUCCESS_STATUS_LIST =
-      List.of(TStatusCode.SUCCESS_STATUS, TStatusCode.SUCCESS_WITH_INFO_STATUS);
+      java.util.Arrays.asList(TStatusCode.SUCCESS_STATUS, TStatusCode.SUCCESS_WITH_INFO_STATUS);
 
   public static TNamespace getNamespace(String catalog, String schema) {
     return new TNamespace().setCatalogName(catalog).setSchemaName(schema);
